ARM-TEMPLATES/A10-vThunder_ADC-2NIC-1VM/ARM_TMPL_2NIC_1VM_1.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "defaultValue": "vthunder",
            "metadata": {
                "description": "User name for the Vthunder."
            }
        },
        "authenticationType": {
            "type": "string",
            "defaultValue": "password",
            "allowedValues": [
                "sshPublicKey",
                "password"
            ],
            "metadata": {
                "description": "Type of authentication to use on the Vthunder. SSH key is recommended."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "SSH Key or password for the Virtual Machine. SSH key is recommended."
            }
        },
        "storageAccountName": {
            "type": "string",
            "metadata": {
                "description": "storage Account Name"
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "metadata": {
                "description": "storage Account Name"
            }
        },
        "dnsLabelPrefix": {
            "type": "string",
            "defaultValue": "vthunder",
            "metadata": {
                "description": "Unique DNS Name for the Public IP used to access the Vthunder."
            }
        },
        "addressPrefixValue": {
            "type": "string",
            "metadata": {
                "description": "Value of addressPrefix"
            }

        },
        "vthunderName": {
            "type": "string",
            "metadata": {
                "description": "Name of the Vthunder"
            }
        },
        "nic1Name": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic1"
            }

        },
        "nic2Name": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic2"
            }

        },
        "publicIPAddressName": {
            "type": "string",
            "metadata": {
                "description": "unique Public Ip Name"
            }
        },
        "networkSecurityGroupName": {
            "type": "string",
            "metadata": {
                "description": "Unique network security group name"
            }
        },
        "mgmtIntfPrivatePrefix": {
            "type": "string",
            "metadata": {
                "description": "management interface prefix"
            }
        },
        "eth1PrivatePrefix": {
            "type": "string",
            "metadata": {
                "description": "Enter ethernet1 interface private ip"
            }

        },
        "mgmtIntfPrivateAddress": {
            "type": "string",
            "metadata": {
                "description": "Enter management interface private ip"
            }

        },
        "eth1PrivateAddress": {
            "type": "string",
            "metadata": {
                "description": "ethernet1 interface prefix"
            }
        },
        "vThunderImage": {
            "type": "string",
            "defaultValue": "vthunder_byol",
            "metadata": {
                "description": "Name of vthunder image"
                }
            },
        "publisherName": {
            "type": "string",
            "metadata": {
                "description": "Name of publisher"
            }

        },
        "productName": {
            "type": "string",
            "metadata": {
                "description": "Name of product"
            }

        },
        "vthunderSize": {
            "defaultValue": "Standard_DS2_v2",
            "metadata": {
                "description": "Size of the vthunder"
            },
            "type": "string"
        }
    },
    "variables": {
        "apiVersion": "2015-06-15",
        "location": "[resourceGroup().location]",
        "storageAccountName": "[parameters('storageAccountName')]",
        "storageAccountType": "Standard_GRS",
        "imagePublisher": "a10networks",
        "imageOffer": "a10-vthunder-adc-520-for-microsoft-azure",
        "vnetName": "[parameters('virtualNetworkName')]",
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "addressPrefix": "[parameters('addressPrefixValue')]",
        "subnet1Name": "mgmt_subnet",
        "subnet1Id": "[concat(variables('vnetId'), '/subnets/', variables('subnet1Name'))]",
        "subnet2Name": "data1_subnet",
        "subnet2Id": "[concat(variables('vnetId'), '/subnets/', variables('subnet2Name'))]",
        "publicIPAddressType": "Dynamic",
        "publicIPAddressId": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddressName'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[variables('storageAccountName')]",
            "kind": "Storage",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "name": "[parameters('networkSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "description": "ssh-rule",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "0.0.0.0/0",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "description": "https-rule",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "description": "http-rule",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "snmp",
                        "properties": {
                            "description": "snmp-rule",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "161",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ping",
                        "properties": {
                            "description": "ping-rule",
                            "protocol": "Icmp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1040,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "ntp",
                        "properties": {
                            "description": "ntp-rule",
                            "protocol": "Udp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1050,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }

                ]
            }


        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnetName')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet1Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('mgmtIntfPrivatePrefix')]"
                        }
                    },
                    {
                        "name": "[variables('subnet2Name')]",
                        "properties": {
                            "addressPrefix": "[parameters('eth1PrivatePrefix')]"
                        }
                    }
                ]

            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]"

            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[parameters('publicIPAddressName')]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsLabelPrefix')]"
                },
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]",
                "[variables('publicIPAddressId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic1Name')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "[parameters('mgmtIntfPrivateAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "PublicIpAddress": {
                                "Id": "[variables('publicIPAddressId')]"
                            },
                            "subnet": {
                                "id": "[variables('subnet1Id')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic2Name')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig2",
                        "properties": {
                            "privateIPAddress": "[parameters('eth1PrivateAddress')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('subnet2Id')]"
                            }
                        }
                    }
                ]
            }
        },

        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[resourceGroup().location]",
            "name": "[parameters('vthunderName')]",
            "plan": {
                "name": "[parameters('vThunderImage')]",
                "product": "[parameters('productName')]",
                "publisher": "[parameters('publisherName')]"
            },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vthunderSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[parameters('vThunderImage')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('vthunderName'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": null
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vthunderName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "adminPassword": "[parameters('adminPassword')]",
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic1Name'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic2Name'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('http://', variables('storageAccountName'), '.blob.core.windows.net')]"
                    }
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nic1Name'))]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nic2Name'))]"

            ]
        }
    ],
    "outputs": {
        "sshCommand": {
            "type": "string",
            "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(parameters('publicIPAddressName')).dnsSettings.fqdn)]"
        }
    }

}
